--- a/app/globals.css
+++ b/app/globals.css
@@ -201,7 +201,7 @@ body {
   }
 
   .btn-mic {
-    @apply border-2 border-black rounded-lg flex flex-col gap-2 items-center py-8 max-sm:py-2 cursor-pointer w-full;
+    @apply border border-black rounded-md flex flex-row items-center gap-2 px-3 py-1 cursor-pointer w-fit text-sm;
   }
 
   .transcript {
